--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-18T19:23:24Z</date>
+						<date>2019-02-20T22:52:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -60,16 +60,6 @@
 								<key>Size</key>
 								<integer>124861</integer>
 							</dict>
-							<key>files/stacks-image-012ccd0-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								XsvJYylntJyu
-								SBVPvLHXuw==
-								</data>
-								<key>Size</key>
-								<integer>38805</integer>
-							</dict>
 							<key>files/stacks-image-0655a30-350x250.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -90,26 +80,6 @@
 								<key>Size</key>
 								<integer>530208</integer>
 							</dict>
-							<key>files/stacks-image-1500267-332x498.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								/1yJEGVtgDYC
-								qJpjqOOqSg==
-								</data>
-								<key>Size</key>
-								<integer>37050</integer>
-							</dict>
-							<key>files/stacks-image-1500267-332x498@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								5HaFH1+IeZ2q
-								+imybGmwWQ==
-								</data>
-								<key>Size</key>
-								<integer>61496</integer>
-							</dict>
 							<key>files/stacks-image-1fdb6e6-350x250.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -129,16 +99,6 @@
 								</data>
 								<key>Size</key>
 								<integer>26330</integer>
-							</dict>
-							<key>files/stacks-image-3179185-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								F9b2GlY9B0E6
-								KtfJt7YGVg==
-								</data>
-								<key>Size</key>
-								<integer>28413</integer>
 							</dict>
 							<key>files/stacks-image-5433a01-350x375.jpg</key>
 							<dict>
@@ -210,46 +170,6 @@
 								<key>Size</key>
 								<integer>257542</integer>
 							</dict>
-							<key>files/stacks-image-78f98c2-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								VQeylHByJYMt
-								eHl8ZH4K0Q==
-								</data>
-								<key>Size</key>
-								<integer>40200</integer>
-							</dict>
-							<key>files/stacks-image-78f98c2-350x375@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								ayixwrm11vSB
-								j4hesfTjNw==
-								</data>
-								<key>Size</key>
-								<integer>66232</integer>
-							</dict>
-							<key>files/stacks-image-7bc5484-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								SOlRP1yO0rWu
-								gZ/HtPG+rw==
-								</data>
-								<key>Size</key>
-								<integer>36199</integer>
-							</dict>
-							<key>files/stacks-image-7bc5484-350x375@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								TL7yNXylaDtA
-								Ftz2qb0T9g==
-								</data>
-								<key>Size</key>
-								<integer>61533</integer>
-							</dict>
 							<key>files/stacks-image-843a067.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -310,26 +230,6 @@
 								<key>Size</key>
 								<integer>52151</integer>
 							</dict>
-							<key>files/stacks-image-e5e8064-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								4+MD2lluE/v8
-								P3P4cYsfGg==
-								</data>
-								<key>Size</key>
-								<integer>30647</integer>
-							</dict>
-							<key>files/stacks-image-e5e8064-350x375@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								JyszyP6C4FQg
-								UIxslUmduw==
-								</data>
-								<key>Size</key>
-								<integer>48100</integer>
-							</dict>
 							<key>files/stacks-image-eb41103.png</key>
 							<dict>
 								<key>Digest</key>
@@ -374,31 +274,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qkYnoPkXXWK+
-								gNyNO+oH2Q==
+								Uj9DMypoyyyJ
+								DPOZRonopA==
 								</data>
 								<key>Size</key>
-								<integer>393216</integer>
+								<integer>343443</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								QYyjjbR875Z/
-								T8kjY5C2bw==
+								xcQh6qsLTu3O
+								lDr5yPzIQA==
 								</data>
 								<key>Size</key>
-								<integer>39675</integer>
+								<integer>36763</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								/If7qpmGSNqK
-								ygYGVTRZiA==
+								dZsX8KQ5WA3s
+								3JyrLrIksw==
 								</data>
 								<key>Size</key>
-								<integer>314554</integer>
+								<integer>254426</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
