chat with editors change
chat with editors change

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -7874,7 +7874,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-20T22:52:41Z</date>
+						<date>2019-02-20T23:08:25Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8133,11 +8133,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dZsX8KQ5WA3s
-								3JyrLrIksw==
+								q7d9h64XzW8u
+								5WThpObq5A==
 								</data>
 								<key>Size</key>
-								<integer>254426</integer>
+								<integer>254405</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13388,7 +13388,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-20T22:52:41Z</date>
+						<date>2019-02-20T23:08:25Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14427,11 +14427,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bTRIIU12W9LG
-								Qy9BqlS7Jw==
+								P2deecEnFqMc
+								w0HXQDdeoA==
 								</data>
 								<key>Size</key>
-								<integer>3742</integer>
+								<integer>3705</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14515,7 +14515,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HBDwjgNEQggAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HBDwq2JxQ8gAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -14526,7 +14526,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcEPCOA0S3+A
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcEPCrYnGDOA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
