--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-20T22:52:41Z</date>
+						<date>2019-02-20T23:08:25Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -294,11 +294,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dZsX8KQ5WA3s
-								3JyrLrIksw==
+								q7d9h64XzW8u
+								5WThpObq5A==
 								</data>
 								<key>Size</key>
-								<integer>254426</integer>
+								<integer>254405</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
