--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/6-NetSci-Sponsors/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-19T18:56:11Z</date>
+						<date>2019-02-21T15:30:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -190,16 +190,6 @@
 								<key>Size</key>
 								<integer>83593</integer>
 							</dict>
-							<key>files/stacks-image-8c810c5.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								XUMW4lhKAgNP
-								5CeuqjFU/w==
-								</data>
-								<key>Size</key>
-								<integer>2184</integer>
-							</dict>
 							<key>files/stacks-image-8e88332-100x104.png</key>
 							<dict>
 								<key>Digest</key>
@@ -270,6 +260,16 @@
 								<key>Size</key>
 								<integer>67264</integer>
 							</dict>
+							<key>files/stacks-image-f332e12.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								rzfTtx6ywXOR
+								Yn29hLGKig==
+								</data>
+								<key>Size</key>
+								<integer>8378</integer>
+							</dict>
 							<key>files/stacks-image-fd0e8b0-248x56.png</key>
 							<dict>
 								<key>Digest</key>
@@ -304,11 +304,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								maJkgzuOdPlH
-								ODJ99uHvSg==
+								dmKNe7MToAiG
+								slfGZr9LuA==
 								</data>
 								<key>Size</key>
-								<integer>73776</integer>
+								<integer>73811</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
